--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,15 @@
         <link rel="stylesheet" href="css/estilos.css" />
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el tìtulo atractivo e  interesante del post </h1>
+                  <p>Y este es el parrafo de inicio donde vmoas a explicar las cosas increibles que se 
+                     pueden hacer con ramas. 
+                  </p>
+            </div>
+        </div>
+    </body>    
+        
     <script type="text/javascript">(function(){window['__CF$cv$params']={r:'67ab11e27c77a11a',m:'15802b424c9939018e37facace2999c71b5808da-1628282317-1800-AbNq1TCphSO/AiZbyTHjzsnA3zPoeTh/MuqH789JmCfXzgBLVU1RNjhgscxti1yCdmHmwCERjffWMEH0PcoUzKymJrjlNb96mCnIpH2FxSxsK7cBlFdj+BWMzTnLS66PQQOoxX0PU3qPhoPCrPPpZxyx+csrMSUPKdekxdX4NdC3WNb5hFbx7jZ9n9lI45nY0M/ubXlCMCk/YB7ey98a/1POObj27HVQKGe2XUkkVy8xRGNyulHmjtwKZrSnMomMZg==',s:[0x3efb59cf3e,0x9d6a2d497e],}})();</script></body>
 </html>
