--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,9 @@
             <p>Los blogs son la mejor forma de compartir informaciÃ³n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadÃ­sticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
         </div>
+        <div id ="footer">
+            <p>Curso de Git area FOOTER</p>
+        </div>
     </div>
 
 </body></html>
